scrollbar fix

--- a/my-new-portfolio/src/Components/scrollBar/scrollBar.scss
+++ b/my-new-portfolio/src/Components/scrollBar/scrollBar.scss
@@ -8,6 +8,7 @@
   visibility: hidden;
   opacity: 0;
   transition: all 0.5s ease-in;
+  z-index: 10;
 }
 
 .progress.active {
@@ -17,7 +18,7 @@
 
 .bar {
   position: fixed;
-  left: 8px;
+  left: 15px;
   background: #e8dfd8;
   width: 3px;
   height: 100vh;
@@ -28,7 +29,7 @@
 .bar__fill {
   display: block;
   background: #bd8044;
-  height: 50%;
+  // height: 100%;
 }
 
 .bar__fill2 {
@@ -43,12 +44,7 @@
   color: #AC9585;
   cursor: pointer;
   display: block;
-  left: 6px;
-  padding-top: 100px;
-  // transform: translate(0, 200px);
-}
-.point:nth-of-type(2) {
-  padding-top: 200px;
+  left: 12px;
 }
 .point:before {
   content: "";
@@ -84,13 +80,13 @@
 
 .label {
   position: absolute;
-  // top: 100%;
-  left: 15px;
-  // margin: 20px 0 0 0;
-  font-size: 0.75rem;
+  z-index: 10;
+  top: -2px;
+  left: 20px;
+  font-size: 1rem;
   font-weight: 600;
   text-transform: uppercase;
-  // transform: translate(-50%, 0);
+  font-family: "Major Mono Display", monospace;
 }
 
 .radius-toggle {
